--- a/index.html
+++ b/index.html
@@ -5,57 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 
     <style>
-        * {
-            box-sizing: border-box;
+        .results_list {
+            padding: 15px;
+            display: flex;
+            flex-direction: column;
         }
 
-        html,
-        body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-        }
-
-        header {
-            width: 100%;
-            height: 100px;
-            background: gainsboro;
-            text-align: center;
-        }
-
-        h1 {
-            margin: auto;
-            padding-top: 30px;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .container {
-            height: 100%;
-            width: 100%;
-            margin: 0;
-            padding: 0;
-            background: yellow;
-            margin: auto;
-        }
-
-        .row {
-            height: 100%;
-        }
-
-        #sidebar {
-            height: 100%;
-            background: blue;
-            padding: 0;
-        }
-
-        #main {
-            height: 100%;
-            background: red;
-            padding: 0;
+        .forecast_day {
+            display: flex;
         }
     </style>
 </head>
@@ -66,8 +27,26 @@
     </header>
     <div class="container">
         <div class="row">
-            <div id="sidebar" class="col-sm-12 col-md-3"></div>
-            <div id="main" class="col-sm-12 col-md-9"></div>
+            <div id="sidebar" class="col-sm-12 col-md-3">
+                <div class="search_bar">
+                    <input type="text"><button type="submit">Sub</button>
+                </div>
+
+                <div class="search_list">
+                    <p class="search_item">Item 1</p>
+                    <p class="search_item">Item 2</p>
+                    <p class="search_item">Item 3</p>
+                </div>
+            </div>
+            <div id="main" class="col-sm-12 col-md-9">
+                <div class="results_list">
+                    <div class="forecast_day">
+                        <p id="temp">75*F</p>
+                        <p id="humidity">76hum</p>
+                        <p id="UV">5</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
