--- a/index.html
+++ b/index.html
@@ -58,13 +58,23 @@
             margin-bottom: 15px;
         }
 
-        .f_date {
-            width: 100px;
+
+
+        #day_header {
+            background: rgb(24, 115, 235);
+            color: white;
+            font-weight: bold;
+
         }
 
-        .f_slot {
-            width: 20%;
-            max-width: 100px;
+        .day {
+            background: white;
+            padding: 5px;
+        }
+
+        .day p {
+            margin: 0;
+            text-align: center;
         }
     </style>
 </head>
@@ -77,7 +87,7 @@
         <div class="row">
             <div id="sidebar" class="col-sm-12 col-md-3">
                 <div class="search_bar">
-                    <input type="text" placeholder="  Search by City Name"><button type="submit"><i class="fa fa-search"
+                    <input type="text" placeholder="  Search by City"><button type="submit"><i class="fa fa-search"
                             aria-hidden="true"></i></button>
                 </div>
 
@@ -90,26 +100,47 @@
             <div id="main" class="col-sm-12 col-md-9">
                 <h2 id="city_name">Raleigh</h1>
                     <div class="results_list">
-                        <div class="forecast_header">
-                            <p>Date</p>
-                            <p>Sky</p>
-                            <p>Temp</p>
-                            <p>Humidity</p>
-                            <p>Wind Speed</p>
-                            <p>UV Index</p>
-                        </div>
-                        <div id="1" class="forecast_day">
-                            <p class="f_date">7/15/20</p>
-                            <p class="f_slot">sunny</p>
-                            <p class="f_slot">75*C</p>
-                            <p class="f_slot">45</p>
-                            <p class="f_slot">15</p>
-                            <p class="f_slot">5</p>
-                        </div>
-                        <div class="forecast_day no_border_bottom">
-                            <p id="temp">75*F</p>
-                            <p id="humidity">76hum</p>
-                            <p id="UV">5</p>
+                        <div class="container">
+                            <div id="day_header" class="row day">
+                                <div class="col-2">
+                                    <p>Date</p>
+                                </div>
+                                <div class="col-2">
+                                    <p>Sky</p>
+                                </div>
+                                <div class="col-2">
+                                    <p>UV</p>
+                                </div>
+                                <div class="col-2">
+                                    <p>Temp</p>
+                                </div>
+                                <div class="col-2">
+                                    <p>Hum</p>
+                                </div>
+                                <div class="col-2">
+                                    <p>Wind</p>
+                                </div>
+                            </div>
+                            <div id="day" class="row day">
+                                <div class="col-2">
+                                    <p>6/24/19</p>
+                                </div>
+                                <div class="col-2">
+                                    <p>icon</p>
+                                </div>
+                                <div class="col-2">
+                                    <p>4</p>
+                                </div>
+                                <div class="col-2">
+                                    <p>75*F</p>
+                                </div>
+                                <div class="col-2">
+                                    <p>45</p>
+                                </div>
+                                <div class="col-2">
+                                    <p>5mph</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
             </div>
