--- a/index.html
+++ b/index.html
@@ -10,72 +10,7 @@
     <title>Document</title>
 
     <style>
-        .results_list {
 
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            max-width: 700px;
-            margin-left: auto;
-            margin-right: auto;
-            border: 1px solid grey;
-            border-radius: 5px;
-            background: white;
-        }
-
-        .forecast_header {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            background: rgb(24, 115, 235);
-            color: white;
-            padding: 5px;
-            font-weight: bold;
-        }
-
-        .forecast_header p {
-            margin: 0px;
-        }
-
-        .forecast_day {
-            padding: 5px;
-            display: flex;
-            /* justify-content: space-around; */
-            width: 100%;
-            border-bottom: 1px solid grey;
-        }
-
-        .no_border_bottom {
-            border-bottom: none;
-        }
-
-        #no_border_bottom {
-            border-bottom: none;
-        }
-
-        #city_name {
-            text-align: center;
-            margin-bottom: 15px;
-        }
-
-
-
-        #day_header {
-            background: rgb(24, 115, 235);
-            color: white;
-            font-weight: bold;
-
-        }
-
-        .day {
-            background: white;
-            padding: 5px;
-        }
-
-        .day p {
-            margin: 0;
-            text-align: center;
-        }
     </style>
 </head>
 
@@ -87,14 +22,14 @@
         <div class="row">
             <div id="sidebar" class="col-sm-12 col-md-3">
                 <div class="search_bar">
-                    <input type="text" placeholder="  Search by City"><button type="submit"><i class="fa fa-search"
-                            aria-hidden="true"></i></button>
+                    <input id="city_input" type="text" placeholder="  Search by City"><button id="submit_btn"><i
+                            class="fa fa-search" aria-hidden="true"></i></button>
                 </div>
 
                 <div class="search_list">
-                    <p class="search_item">Raleigh</p>
+                    <!-- <p class="search_item">Raleigh</p>
                     <p class="search_item">Charlotte</p>
-                    <p id="no_border_bottom" class="search_item">San Diego</p>
+                    <p id="no_border_bottom" class="search_item">San Diego</p> -->
                 </div>
             </div>
             <div id="main" class="col-sm-12 col-md-9">
@@ -121,7 +56,7 @@
                                     <p>Wind</p>
                                 </div>
                             </div>
-                            <div id="day" class="row day">
+                            <!-- <div id="day" class="row day">
                                 <div class="col-2">
                                     <p>6/24/19</p>
                                 </div>
@@ -140,14 +75,14 @@
                                 <div class="col-2">
                                     <p>5mph</p>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
             </div>
         </div>
     </div>
-
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src='script.js'></script>
 </body>
 
 </html>
