Got weather data to get basic render in table, with caveats

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div id="main" class="col-sm-12 col-md-9">
                 <h2 id="city_name">Raleigh</h1>
                     <div class="results_list">
-                        <div class="container">
+                        <div id="box" class="container">
                             <div id="day_header" class="row day">
                                 <div class="col-2">
                                     <p>Date</p>
