Added UV front end

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h2 id="city_name">Raleigh</h1>
                     <div class="results_list">
                         <div id="box" class="container">
-                            <div id="day_header" class="row day">
+                            <!-- <div id="day_header" class="row day">
                                 <div class="col-2">
                                     <p>Date</p>
                                 </div>
@@ -55,7 +55,7 @@
                                 <div class="col-2">
                                     <p>Wind</p>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- <div id="day" class="row day">
                                 <div class="col-2">
                                     <p>6/24/19</p>
