Added a basic clear button to help manage list length and local storage

--- a/index.html
+++ b/index.html
@@ -26,56 +26,16 @@
                             class="fa fa-search" aria-hidden="true"></i></button>
                 </div>
 
+                <button id="clear_btn"><i class="fa fa-close" aria-hidden="true"></i></button>
                 <div class="search_list">
-                    <!-- <p class="search_item">Raleigh</p>
-                    <p class="search_item">Charlotte</p>
-                    <p id="no_border_bottom" class="search_item">San Diego</p> -->
+
                 </div>
             </div>
             <div id="main" class="col-sm-12 col-md-9">
                 <h2 id="city_name">Raleigh</h1>
                     <div class="results_list">
                         <div id="box" class="container">
-                            <!-- <div id="day_header" class="row day">
-                                <div class="col-2">
-                                    <p>Date</p>
-                                </div>
-                                <div class="col-2">
-                                    <p>Sky</p>
-                                </div>
-                                <div class="col-2">
-                                    <p>UV</p>
-                                </div>
-                                <div class="col-2">
-                                    <p>Temp</p>
-                                </div>
-                                <div class="col-2">
-                                    <p>Hum</p>
-                                </div>
-                                <div class="col-2">
-                                    <p>Wind</p>
-                                </div>
-                            </div> -->
-                            <!-- <div id="day" class="row day">
-                                <div class="col-2">
-                                    <p>6/24/19</p>
-                                </div>
-                                <div class="col-2">
-                                    <p>icon</p>
-                                </div>
-                                <div class="col-2">
-                                    <p>4</p>
-                                </div>
-                                <div class="col-2">
-                                    <p>75*F</p>
-                                </div>
-                                <div class="col-2">
-                                    <p>45</p>
-                                </div>
-                                <div class="col-2">
-                                    <p>5mph</p>
-                                </div>
-                            </div> -->
+
                         </div>
                     </div>
             </div>
