Styled the clear button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
     <title>Document</title>
 
     <style>
+        #clear_btn {
+            background: rgb(252, 212, 139);
+            margin-bottom: 10px;
+            width: 100%;
+            border: 1px solid grey;
+            border-radius: 5px;
+        }
 
+        #clear_btn:hover {
+            background: orange;
+        }
     </style>
 </head>
 
@@ -26,7 +36,7 @@
                             class="fa fa-search" aria-hidden="true"></i></button>
                 </div>
 
-                <button id="clear_btn"><i class="fa fa-close" aria-hidden="true"></i></button>
+                <button id="clear_btn">Clear Searches</button>
                 <div class="search_list">
 
                 </div>
